--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div class="col-md-8">
                 <div class="wow bounceInUp" data-wow-delay="0.5s">
                     <div class="inner">
-                        <a href="meditation/meditation.html"><img src="img/creativity/meditation.jpg" height="350px" /></a>
+                        <a href="Meditation/meditation.html"><img src="img/creativity/meditation.jpg" height="350px" /></a>
                 	</div>
                 </div>
             </div>
@@ -167,7 +167,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="wow bounceInUp" data-wow-delay="0.2s">
-                    <a href="#creativity"><img src="img/awareness/index-02.png" height="350px" /></a>
+                    <img src="img/awareness/index-02.png" height="350px" /></a>
                 </div>
             </div>
             <div class="col-md-8">
@@ -193,7 +193,7 @@
             <div class="col-md-4">
                 <div class="wow bounceInUp" data-wow-delay="1s">
                     <div class="inner">
-                     <a href="concrete/concrete.html"><img src="img/awareness/concrete.jpg" height="350px" style="padding-left:5px;"/>
+                     <a href="Concrete/concrete.html"><img src="img/awareness/concrete.jpg" height="350px" style="padding-left:5px;"/>
                     </div>
                 </div>
             </div>
